feat: bind arrears router
