# internal/adapter/order/restful/api/v1/v1.go
@@ -1,0 +1,11 @@
+package v1
+
+import (
+	"github.com/blackhorseya/irent/internal/adapter/order/restful/api/v1/arrears"
+	ob "github.com/blackhorseya/irent/pkg/entity/domain/order/biz"
+	"github.com/gin-gonic/gin"
+)
+
+func Handle(g *gin.RouterGroup, biz ob.IBiz) {
+	arrears.Handle(g.Group("/arrears"), biz)
+}
